# PoeticHarmony

./: .replit  app.py  midi_generator.py  models.py  poetry_analyzer.py  pyproject.toml  replit.md  routes.py
.github/workflows/: python-package-conda.yml
attached_assets/: Pasted-Develop-an-innovative-Poetry-to-Music-application-that-algorithmically-translates-poems-into-express-1751303556856_1751303556857.txt
instance/: poetry_music.db
static/css/: style.css
static/js/: main.js
static/midi/: I_felt_a_Funeral_in_my_Brain.mid  If_by_rudyard_kipling.mid  Untitled_Poem.mid
templates/: base.html  index.html
