[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "midiutil>=1.2.1",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.41",
    "textblob>=0.19.0",
    "werkzeug>=3.1.3",
]
